--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,12 +6,12 @@ jobs:
    steps:
      - checkout
      - restore_cache:
-         key: deps-{[ checksum "requiremnts.lock" ]}
+         key: deps-{{ checksum "requiremnts.lock" }}
      - run:
          command: |
            pip install --user -r requiremnts.lock
      - save_cache
-         key: deps-{[ checksum "requiremnts.lock" ]}
+         key: deps-{{ checksum "requiremnts.lock" }}
          paths:
            - "~/.local"
  test:
@@ -20,7 +20,7 @@ jobs:
    steps:
      - checkout
      - restore_cache:
-         key: deps-{[ checksum "requiremnts.lock" ]}
+         key: deps-{{ checksum "requiremnts.lock" }}
      - run:
          command: |
            python -m unittest -v
