CircleCIの設定ファイルを修正

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
      - run:
          command: |
            pip install --user -r requiremnts.lock
-     - save_cache
+     - save_cache:
          key: deps-{{ checksum "requiremnts.lock" }}
          paths:
            - "~/.local"
