--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
          key: deps-{{ checksum "requiremnts.lock" }}
      - run:
          command: |
-           pip install --user -r requiremnts.lock
+           pip install --user -r requirements.lock
      - save_cache:
          key: deps-{{ checksum "requirements.lock" }}
          paths:
